Fix sidebar collapsing

--- a/frontend/dashboard-client/src/pages/Canvas/GraphSidebar/style.css
+++ b/frontend/dashboard-client/src/pages/Canvas/GraphSidebar/style.css
@@ -10,3 +10,7 @@
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
   background-color: #fff;
 }
+
+.attached-to-right-edge {
+  right: 0;
+}
